fix overlapping text in mygroups module

--- a/modules/mod_mygroups/mod_mygroups.css
+++ b/modules/mod_mygroups/mod_mygroups.css
@@ -16,6 +16,10 @@
 */
 	div.draggable .compactlist li.group {
 		background-position: 0.7em 0.7em;
+		padding-right: 5em;
+		}
+	div.draggable .compactlist li.group a { 
+		/*margin-right: 5em;*/
 		}
 	div.draggable .compactlist li span span.status {
 		}
